# NeoFontRender

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  README.zh-CN.md  addon.gradle  build.gradle  dependencies.gradle  gradle.properties  settings.gradle
.github/workflows/: deploy.yml  ui-enhancements-build.yml  ui-enhancements-release.yml
addons/modern-tooltips/: README.md  build.gradle
addons/modern-tooltips/src/main/resources/: mcmod.info
addons/ui-enhancements/: NOTICE.md  README.md  build.gradle
addons/ui-enhancements/src/main/resources/: mcmod.info  mixins.neofontrender_ui_enhancements.json
docs/: arc3d-modernui-analysis.md  current-text-layering-report.md  integration-api.md  rust-text-and-sign-batching-plan.md
gradle/scripts/: dependencies.gradle  extra.gradle  publishing.gradle
gradle/wrapper/: gradle-wrapper.properties
native/cosmic-text/: Cargo.toml
native/cosmic-text/src/: lib.rs
src/corePack/resources/: mcmod.info
src/main/java/neofontrender/: NeoFontRender.java  Tags.java
src/main/java/neofontrender/api/: FontState.java  FontStyle.java  FontUpdate.java  NeoFontRenderApi.java  RenderingEngine.java
src/main/java/neofontrender/client/: ClientProxy.java  NeofontrenderCommand.java  NeofontrenderDebugOverlayHandler.java  NeofontrenderKeyHandler.java  NeofontrenderMainMenuBranding.java  NeofontrenderOptionsButtonHandler.java
src/main/resources/: mcmod.info  mixins.neofontrender.json  neofontrender_at.cfg  pack.mcmeta
src/resourcePack/resources/: mcmod.info  pack.mcmeta
src/skiaPack/resources/: mcmod.info
(+185 files in other folders)
