[package]
name = "neofontrender-cosmic"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmic-text = { version = "0.19", default-features = false, features = ["std", "swash"] }
jni = { version = "0.21", default-features = false }
skrifa = "0.40"
unicode-script = "0.5"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = "symbols"
